# esp32-altair-8800

./: .dockerignore  .gitignore  404.html  CMakeLists.txt  LICENSE  README.md  index.html  sdkconfig.WAVESHARE-ESP32-S3-Touch-LCD-3.5B.defaults  sdkconfig.defaults  sdkconfig.freenove  sdkconfig.freenove.defaults  sitemap.xml  system.md
.codex/skills/bds-c/: SKILL.md
.codex/skills/mac-asm/: SKILL.md
.github/skills/bds-c/: SKILL.md
.github/skills/esp32-s3/: SKILL.md
.github/skills/mac-asm/: SKILL.md
20-fundamentals/05-Introduction/: index.html
20-fundamentals/10-deployment-options/: index.html
20-fundamentals/23-Altair-emulator/: index.html
20-fundamentals/25-Web-Terminal/: index.html
20-fundamentals/30-introduction-cpm/: index.html
20-fundamentals/40-Rebooting-the-Altair/: index.html
40-deploy-with-docker/10-introduction/: index.html
40-deploy-with-docker/100-Create-Docker-images/: index.html
40-deploy-with-docker/15-install-prerequisites/: index.html
40-deploy-with-docker/17-start-container/: index.html
45-build-from-source/01-Introduction/: index.html
45-build-from-source/03-Build-from-vs-code/: index.html
45-build-from-source/04-Compile-from-CLI/: index.html
45-build-from-source/05-Run-the-emulator/: index.html
45-build-from-source/06-Start-the-web-terminal/: index.html
50-azsphere/01-Introduction/: index.html
50-azsphere/03-architecture/: index.html
50-azsphere/40-Manage-disk-images/: index.html
60-programming/00-Introduction/: index.html
60-programming/00-Manuals/: index.html
60-programming/01-Editing-files/: index.html
60-programming/01-Vibe-Coding/: index.html
60-programming/01-i8080-IO-Ports/: index.html
60-programming/02-Microsoft-BASIC-programming/: index.html
60-programming/03-C-programming/: index.html
60-programming/04-Assembly-programming/: index.html
60-programming/05-Altair-BASIC-programming/: index.html
60-programming/06-Front-panel-programming/: index.html
70-apps/Altair-Apps/: index.html
Altair8800/: 8krom.h  altair_panel.h  disk_loader.h  esp32_88dcdd_sd_card.h  memory.h  pico_88dcdd_sd_card.c
Apps/: CLEAR.ASM  WSPERF.BAS
Apps/ATTN/: ATTN.C  ATTN.IN  ATTN.SUB  ATTN.WTS  ATTNC89.C  ATTNC89.COM  ATTNINF.ASM  ATTNZ80.MAC  ATTNZ80.SUB  README.md
Apps/AUTORUN/: AUTORUN.SUB
Apps/BREAKOUT/: BREAKOUT.C
Apps/BUILDALL/: BUILDALL.SUB
Apps/CHAT/: CHAT.C  CHAT.CFG  CHAT.SUB  CHAT.SYS  CHATJSON.C  CHATJSON.H  README.MD
Apps/CLOCK/: CLOCK.C  CLOCK.SUB
Apps/DATE/: DATE.SUB
Apps/EDIT/: EDIT.ASM  EDIT.SUB
Apps/ENV/: ENV.ASM  ENV.C  ENV.SUB
Apps/ESP32/: ESP32.ASM  ESP32.C  ESP32.SUB
Apps/FT/: FT.ASM  FT.C  FT.SUB  README.MD
Apps/MCPDONE/: MCPDONE.ASM  MCPDONE.SUB
Apps/ONBOARD/: ONBOARD.C
Apps/SDK/: DXENV.C  DXSYS.C  DXTERM.C  DXTIMER.C
Apps/SHEETS/: SHEETC.C  SHEETS.ASM  SHEETS.C  SHEETS.H  SHEETS.SUB  WIP-sum-range-bug.md
Apps/SLEEP/: SLEEP.ASM  SLEEP.SUB
Apps/VIBE/: VIBE.SUB
Apps/WSPERF/: WSPERF.C  WSPERF.SUB
FrontPanel/: altair_panel.c  altair_panel.h  ili9341.h
PortDrivers/: io_ports.c  io_ports.h  time_io.c  utility_io.c  utility_io.h
altair8800/: 4kbas32.h  88dskrom.h  cpu_x80_adapter.cpp  esp32_88dcdd_sd_card.c  esp32_88dcdd_sd_card.h  intel8080.c  intel8080.h  memory.c  op_codes.h  pico_88dcdd_sd_card.h  remote_fs.c  types.h  universal_88dcdd.c  universal_88dcdd.h  x80.cxx  x80.hxx
altair8800/x80_compat/: djl_os.hxx  djltrace.hxx
altair_local/: CMakeLists.txt  README.md  build_version.h  host_platform.c  io_ports.c  main.c  sdkconfig.h  websocket_console.c  websocket_console.h
altair_local/PortDrivers/: chat_io.h  environment_io.c  host_chat_io.c  host_files_io.c  host_files_io.h  io_ports.c  time_io.c  time_io.h  utility_io.c  weather_io.c  weather_io.h
altair_mcp_server/: CMakeLists.txt  README.md  json_util.c  json_util.h  jsonrpc.c  jsonrpc.h  mcp_server.c
altair_mcp_server/pristine/: cpm63k.dsk
build-host-tests/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  run_8080_tests
captive_portal/: captive_portal.c  captive_portal.h
disks/: bdsc-v1.60.dsk  blank.dsk  cpm63k.dsk  escape-posix.dsk
docker/: Dockerfile  README.md  build-multiarch.sh  compose.yaml  docker-entrypoint.sh
docs/: mkdocs.yml  websocket-fixes.md
docs/docs/en/: index.md
drivers/axs15231b/: esp_lcd_axs15231b.c
drivers/bt_keyboard/: bt_keyboard.c  bt_keyboard.h
drivers/sdcard_esp32/: CMakeLists.txt  sdcard_esp32.c  sdcard_esp32.h
front_panel/: altair_panel.c  altair_panel.h  altair_splash.c  altair_splash.h  axs15231b_lcd.c  axs15231b_lcd.h  ili9341.c  ili9341.h  panel_display.c  panel_display.h  virtual_monitor.c  virtual_monitor.h  vt100_terminal.c  vt100_terminal.h
hardware/altair_xiao_tiny/: BOM.csv  README.md  altair_xiao_tiny.kicad_pcb  altair_xiao_tiny.kicad_prl  altair_xiao_tiny.kicad_pro
host_tests/: CMakeLists.txt  README.md  run_8080_tests.c  test_json_util.c
host_tests/roms/: .gitkeep  superzazu-8080.webloc
host_tests/roms_z80/: .gitkeep
local_altair/: CMakeLists.txt  README.md  ansi_input.c  ansi_input.h  io_ports.c  main.c
local_altair/PortDrivers/: environment_io.c  environment_io.h  host_chat_io.c  time_io.c  utility_io.c  utility_io.h  weather_io.c
main/: CMakeLists.txt  Kconfig.projbuild  board_config.h  config.c  config.h  cpu_state.c  cpu_state.h  i8080_disasm.c  main.c  network_time.c  network_time.h  status_led.c  status_led.h  terminal_input.c  terminal_input.h  time_setup.c  time_setup.h  websocket_console.c  websocket_console.h  websocket_server.c  websocket_server.h  wifi.c  wifi.h  wifi_setup.c  wifi_setup.h
mcp_app_build_server/: CMakeLists.txt  README.md
navigating-the-docs/: index.html
port_drivers/: chat_io.c  chat_io.h  environment_io.c  files_io.c  files_io.h  io_ports.c  io_ports.h  json_scan.c  json_scan.h  time_io.c  time_io.h  utility_io.c  utility_io.h  weather_io.c  weather_io.h
scripts/: build-host-tools-windows.cmd  build-host-tools.sh  update_vscode_idf_paths.py
search/: search_index.json
terminal/: README.md  index.html  static_html_hex.h  update_static_html.sh
(+56 files in other folders)
